--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1,10 +1,10 @@
 config ARCH
 	string
-	option env="ARCH"
+	default "x86"
 
 config KERNELVERSION
 	string
-	option env="KERNELVERSION"
+	default "2.6.30"
 
 config DEFCONFIG_LIST
 	string
